--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div>
-        <img class="img-responsive" src="images/topping.png">
+        <img class="img-responsive" src="https://snehalbsawant.github.io/ADVC79/images/pizza.png">
     </div>
 
 
